# soccer-match-robot

./: .gitignore  Exec1.c  Readme.MD  arduino_1motor.ino  arduino_motors.ino  start_legobot.sh
2_motors/: arduino_2motors.ino
Carms_Ros_Ino_Communication/: README.txt
ExRob2/: Arduino.py
ExRob2/Sketch_2motor/: Sketch_2motor.ino
ExRob2/Sketch_4motor/: ReadMe.txt
ExRob2/arduino_motors/: arduino_motors.ino
ROS_Ino_Communication/: arduino_2motors.ino  arduino_comm.py  arduino_motors.ino  single_motor.ino
Simple movement code/Sketch_4motor/: SimpleMovements.ino
arduino/Simple movement code/Sketch_4motor/: SimpleMovements.ino
arduino_contorl/: motor_driver.ino
docu/: scheme.xml
drafts/Sketch_4motor/: Sketch_4motor.ino
python/: motor_driver.py
raspicam_node/: CMakeLists.txt
raspicam_node/launch/: camerav2_205x154_5fps.launch  camerav2_410x308_10fps.launch
ros_to_arduino_control/: motor_driver.ino
ros_ws/src/bridge_example/: CMakeLists.txt
ros_ws/src/bridge_example/src/: example.cpp  example_ball.py  example_py.py  example_transport.cpp
ros_ws/src/motor_driver/scripts/: motor_driver.py
ros_ws/src/perception/script/: perception_node.py
ros_ws/src/teleop_twist_keyboard/: teleop_twist_keyboard.py
src/basic_bull_controller/: CMakeLists.txt  package.xml
src/basic_bull_controller/src/: basic_bull_controller.py  bull_controller.py
src/bridge_example/: package.xml
src/bridge_example/script/: example_t.py
src/bridge_example/src/: example_t.py
src/bull_controller/: CMakeLists.txt  package.xml
src/bull_controller/nodes/: bull_controller.py  clever_bull_controller.py  fakeDistPub.py
src/motor_driver/scripts/: motor_driver.py
src/perception/: CMakeLists.txt  package.xml
src/perception/launch/: perception.launch
src/perception/nodes/: perception_node.py
src/perception/script/: perception_node.py
src/robot_perception/: CMakeLists.txt  package.xml
src/robot_perception/launch/: dummy_ball_perception.launch  dummy_calibration.launch  dummy_perception.launch  dummy_red_perception.launch
src/robot_perception/nodes/: ball_perception_node.py  blue_perception_node.py  green_perception_node.py  red_perception_node.py
src/teleop_twist_keyboard/: teleop_twist_keyboard.py
